<resources>
    <string name="app_name">Recipe Tracker</string>
    <string name="favorites">Favorites</string>
    <string name="popular">Popular</string>
    <string name="my_recipes">My Recipes</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="title_home">Home</string>
    <string name="title_me">Me</string>
    <string name="search_hint">Search</string>
    <string name="string_return">Back</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="add_a_recipe">Add a Recipe</string>
    <string name="my_recipes_title">My Recipes</string>
    <string name="popular_string">Popular Recipes</string>
    <string name="search">Search</string>
    <string name="instructions">Instructions</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredient">Ingredient</string>
    <string name="dialog_edit_title">Edit the comment</string>
    <string name="login">Login</string>
    <string name="icon">Icon</string>
    <string name="popular_nav">Popular</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="send">send</string>
    <string name="username">username</string>
    <string name="comment">Comment</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete">delete</string>
    <string name="remove_message">Are you sure you want to remove this recipe from your favorites?</string>
    <string name="remove_warning">Only remove your own recipes!</string>
    <string name="delete_prompt">Are you sure you want to delete this recipe?</string>
    <string name="plus">+</string>
    <string name="picture_prompt">Photo source</string>
    <string name="choose_picture">Choose a photo</string>
    <string name="show_pic_dialog_msg">Would you like to choose a picture?</string>
    <string name="comment_warning">Sorry, you do not have the permission to edit this comment.</string>
    <string name="already_logged_out">Already logged out</string>
    <string name="log_out">Log out</string>
    <string name="instructions_string">Instructions</string>
    <string name="edit_warning">Return later to edit again</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
</resources>
