<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@color/cardBackground"
        android:padding="24dp"
>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
    >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/recipe_image_view"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:id="@+id/recipe_view_title"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/holder_buttons"
                android:gravity="center"
        >
            <Button
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_edit_recipe"
                    android:text="@string/edit_recipe"
                    android:layout_marginEnd="10dp"
            />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_delete"
                    android:text="@string/delete"
                    android:layout_weight="5"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ingredients_holder"
                android:orientation="vertical"
                android:gravity="center_horizontal"
        >

        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/instructions_view"
                android:text="@string/instructions_string"
        />
        <Button
                android:id="@+id/Button_show_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
        />
    </LinearLayout>
</ScrollView>